# nlp-ncsr-task3

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_baseline_ner_bert.ipynb  03_q3_error_analysis.ipynb  05_q5_frozen_bert.ipynb  06_q6_pos_tagging.ipynb  07_q7_chunking.ipynb  08_q8_roberta.ipynb
results/ext_gemini_flash_lite/v1_minimal/: aggregated.json  sentences.jsonl
results/ext_glm_flash/v1_minimal/: aggregated.json  sentences.jsonl
results/q1/: seed_42.json  seed_43.json  seed_44.json
results/q10/v1_minimal/: aggregated.json  sentences.jsonl
results/q10/v2_strict_json/: aggregated.json  sentences.jsonl
results/q3/: predictions_seed42.json  summary_seed42.json
results/q5/: seed_42.json  seed_43.json  seed_44.json
results/q6/: q3_analysis_seed42.json  seed_42.json  seed_43.json  seed_44.json
results/q7/: q3_analysis_seed42.json  seed_42.json  seed_43.json  seed_44.json
results/q8/: seed_42.json  seed_43.json  seed_44.json
results/q9/v1_minimal/: aggregated.json  sentences.jsonl
results/q9/v2_strict_json/: aggregated.json  sentences.jsonl
results/q9/v3_with_glossary/: aggregated.json  sentences.jsonl
scripts/: watchdog.py
src/: NER-BERT.py  q1_baseline_3runs.py  q3_error_analysis.py  q5_frozen_bert.py  q6_pos_tagging.py  q7_chunking.py  q8_roberta.py
src/decoder_zero_shot/: _common.py  ext_gemini_flash_lite.py  ext_glm_flash.py  q10_llama_70b.py  q9_llama_8b.py
src/decoder_zero_shot/prompts/: v1_minimal.md  v2_strict_json.md  v3_with_glossary.md
