[project]
name = "nlp-ncsr-task3"
version = "0.1.0"
description = "NCSR Athens — NLP Course, Assignment 3: Sequence Labeling with Pretrained Language Models."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Faidon Grammatikopoulos", email = "faidon.gramm@gmail.com" }]

# Local dependencies for authoring + light scripts. Training and full-dataset evaluation
# still run on Colab — see CLAUDE.md §3. Local scripts must pin device='cpu' (no MPS).
dependencies = [
    "jupyterlab>=4.2",
    "nbformat>=5.10",
    "ruff>=0.6",
    "pandas>=2.2",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "scikit-learn>=1.8.0",
    "seqeval>=1.2.2",
    "tqdm>=4.67.3",
    "kagglehub<1.0",
    "groq>=1.4.0",
    "python-dotenv>=1.2.2",
    "openai>=2.38.0",
    "zai-sdk>=0.2.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src"]
exclude = [".venv", "**/node_modules", "**/.*", "**/__pycache__", "notebooks/**"]
# NER-BERT.py is the instructor-provided starter, kept verbatim. `ignore` (vs `exclude`)
# tells Pylance to suppress diagnostics even when the file is open in the editor.
ignore = ["src/NER-BERT.py"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = "error"
# torch's __all__ omits common runtime names (device, tensor, long, argmax, cat, …).
# These are not real issues, just stub strictness. Silence the rule project-wide.
reportPrivateImportUsage = false
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
